--- a/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
+++ b/src/app/store/dialogs/login-form/store-login-form-dialog.component.html
@@ -48,7 +48,7 @@
     </form>
     <div class="other actions">
       <app-dialog-switcher-button #registerButton
-        label="¿No tienes una cuenta? Regístrate">
+        label="¿No tienes una cuenta? Regístrate aquí">
       </app-dialog-switcher-button>
     </div>
   </div>
