update all author name references

--- a/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.css
+++ b/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.css
@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2020 Benjamin
+ * Copyright (c) 2020 Benjamin La Madrid
  *
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
@@ -30,4 +30,3 @@ h2 {
     justify-content: space-around;
   }
 }
-
