--- a/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
+++ b/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
@@ -1,5 +1,5 @@
 <!--
- Copyright (c) 2020 Benjamin
+ Copyright (c) 2020 Benjamin La Madrid
 
  This software is released under the MIT License.
  https://opensource.org/licenses/MIT
