--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -1,5 +1,5 @@
 <!--
- Copyright (c) 2020 Benjamin
+ Copyright (c) 2020 Benjamin La Madrid
 
  This software is released under the MIT License.
  https://opensource.org/licenses/MIT
@@ -69,4 +69,3 @@
     (add)="onClickAdd()">
   </app-management-data-actions>
 </div>
-
