--- a/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.css
+++ b/src/app/store/dialogs/guest-shipping-form/store-guest-shipping-form-dialog.component.css
@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2020 Benjamin
+ * Copyright (c) 2020 Benjamin La Madrid
  *
  * This software is released under the MIT License.
  * https://opensource.org/licenses/MIT
@@ -18,4 +18,3 @@
     justify-content: space-around;
   }
 }
-
