--- a/src/app/store/dialogs/payment-redirect-prompt/store-payment-redirect-prompt-dialog.component.html
+++ b/src/app/store/dialogs/payment-redirect-prompt/store-payment-redirect-prompt-dialog.component.html
@@ -1,5 +1,5 @@
 <!--
- Copyright (c) 2020 Benjamin
+ Copyright (c) 2020 Benjamin La Madrid
 
  This software is released under the MIT License.
  https://opensource.org/licenses/MIT
