--- a/src/app/store/routes/cart-review/store-cart-review.component.html
+++ b/src/app/store/routes/cart-review/store-cart-review.component.html
@@ -5,7 +5,7 @@
  https://opensource.org/licenses/MIT
 -->
 
-<div class="cart">
+<div class="cart-review">
   <h2 class="products">Productos en el Carrito</h2>
   <div class="products overflow-y">
     <table mat-table [dataSource]="sellDetails$">
