--- a/src/app/store/header/store-header.component.css
+++ b/src/app/store/header/store-header.component.css
@@ -10,12 +10,7 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: stretch;
-  background-color: var(--color-bg);
   border-bottom: 1px solid var(--color-content);
-}
-
-.header * {
-  color: var(--color-content);
 }
 
 .header>* {
@@ -56,7 +51,6 @@
 }
 
 .navigation {
-  background-color: var(--color-bg-dark);
   flex: 0 0 auto;
   justify-content: space-evenly;
   align-items: stretch;
@@ -66,8 +60,10 @@
   display: inline-flex;
   flex-flow: row nowrap;
   align-items: center;
-  border-left: 1px solid var(--color-bg);
-  border-right: 1px solid var(--color-bg);
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-right-width: 1px;
+  border-right-style: solid;
   border-radius: 0;
 }
 
@@ -97,9 +93,10 @@
 }
 
 .action.active {
-  /* background-color: rgba(255,255,255,0.3); */
-  border-top: 1px solid var(--color-content);
-  border-bottom: 1px solid var(--color-content);
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
 }
 
 .middle {
