--- a/src/material-theme.scss
+++ b/src/material-theme.scss
@@ -24,6 +24,9 @@ $trebol-app-theme: mat-light-theme((
 
 @include angular-material-theme($trebol-app-theme);
 
+@import 'src/assets/mixins/store-header.component';
+@include store-header-theme($trebol-app-theme);
+
 @import 'src/assets/mixins/store-catalog.component';
 @include store-catalog-theme($trebol-app-theme);
 
