stretch catalog flex items

--- a/src/app/store/routes/catalog/store-catalog.component.css
+++ b/src/app/store/routes/catalog/store-catalog.component.css
@@ -8,7 +8,7 @@
 .catalog {
   display: flex;
   flex-flow: column nowrap;
-  align-items: center;
+  align-items: stretch;
   justify-items: stretch;
   overflow-x: hidden;
   overflow-y: auto;
