--- a/src/assets/mixins/store-header.component.scss
+++ b/src/assets/mixins/store-header.component.scss
@@ -13,16 +13,15 @@
   $accent: map-get($config, accent);
 
   .header {
-    // background-color: mat-color($primary, light);
-    border-color: mat-color($primary, lighter);
+    background-color: mat-color($primary, lighter);
   }
 
   .header .navigation>* {
-    border-color: mat-color($primary, lighter);
+    border-color: mat-color($primary, light);
   }
 
   .header .action.active {
-    border-color: mat-color($primary, lighter);
+    border-color: mat-color($primary, light);
   }
 }
 
