--- a/src/app/store/header/store-header.component.css
+++ b/src/app/store/header/store-header.component.css
@@ -18,36 +18,8 @@
   flex-flow: row nowrap;
 }
 
-.logo {
+app-store-header-brand {
   flex: 0 0 auto;
-  padding: 0 0.5rem;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-.logo:hover {
-  background-color: rgba(0,0,0,0.2);
-}
-
-.logo .mobile {
-  display: inline;
-}
-
-.logo .desktop {
-  display: none;
-}
-
-@media(min-width: 800px) {
-  .logo {
-    padding: 0 1.5rem 0 1rem;
-  }
-
-  .logo .desktop {
-    display: inline;
-  }
-  .logo .mobile {
-    display: none;
-  }
 }
 
 .navigation {
