--- a/src/app/store/header/store-header.component.html
+++ b/src/app/store/header/store-header.component.html
@@ -6,10 +6,7 @@
 -->
 
 <div class="header">
-  <div class="logo" (click)="onClickViewCompanyDetails()">
-    <h1 class="desktop">{{ desktopTitle }}</h1>
-    <h1 class="mobile">{{ mobileTitle }}</h1>
-  </div>
+  <app-store-header-brand></app-store-header-brand>
   <div class="navigation">
     <a mat-button title="Ir al Catálogo de Productos" routerLink="/store">
       <mat-icon>storefront</mat-icon>
