--- a/src/app/store/header/store-header.component.html
+++ b/src/app/store/header/store-header.component.html
@@ -8,9 +8,7 @@
 <div class="header">
   <app-store-header-brand></app-store-header-brand>
   <app-store-header-navigation></app-store-header-navigation>
-  <div class="middle">
-    <span>Tienda On-line</span>
-  </div>
+  <app-store-header-middle></app-store-header-middle>
   <ng-container *ngIf="(isLoggedIn$ | async); else notLoggedIn">
     <mat-menu #headerMenu>
       <span mat-menu-item disabled>{{ userName$ | async }}</span>
