--- a/src/app/management/routes/images/image-manager.component.css
+++ b/src/app/management/routes/images/image-manager.component.css
@@ -6,13 +6,12 @@
  */
 
 .mat-column-thumb {
-  max-width: 3rem;
   padding: 4px 0.5rem 0;
 }
 
-.mat-column-thumb .thumb-wrapper > img {
+.mat-column-thumb img {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 3rem;
 }
 
 .mat-column-filename {
@@ -21,4 +20,8 @@
 td.mat-column-filename {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
+}
+
+.mat-column-actions {
+  width: 3rem;
 }
