fix file upload component issues

--- a/src/app/shared/components/file-upload/file-upload.component.html
+++ b/src/app/shared/components/file-upload/file-upload.component.html
@@ -22,7 +22,7 @@
       tabindex="-1"
       readonly>{{ fileNames$ | async }}</textarea>
   </ng-template>
-  <button mat-button mat-icon-button>
+  <button type="button" mat-button mat-icon-button>
     <mat-icon class="material-icons">attach_file</mat-icon>
   </button>
 </div>
