update role assignment when editing user

--- a/src/app/management/routes/users/form-dialog/user-manager-form-dialog.component.html
+++ b/src/app/management/routes/users/form-dialog/user-manager-form-dialog.component.html
@@ -31,7 +31,7 @@
 
       <mat-form-field>
         <mat-select placeholder="Rol" formControlName="role">
-          <mat-option *ngFor="let r of (roles$ | async)" [value]="r.id">
+          <mat-option *ngFor="let r of (roles$ | async)" [value]="r.name">
             {{ r.name }}
           </mat-option>
         </mat-select>
