--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -19,22 +19,10 @@
           {{ user.name }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="creationDate">
-        <th mat-header-cell *matHeaderCellDef> Fecha de Creación </th>
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef> Rol </th>
         <td mat-cell *matCellDef="let user">
-          {{ user.createdOn }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="fullName">
-        <th mat-header-cell *matHeaderCellDef> Nombre Real </th>
-        <td mat-cell *matCellDef="let user">
-          {{ user.person.name }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="idCard">
-        <th mat-header-cell *matHeaderCellDef> Rut </th>
-        <td mat-cell *matCellDef="let user">
-          {{ user.person.idCard }}
+          {{ user.role }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
