update css classes of user manager

--- a/src/app/management/routes/users/user-manager.component.css
+++ b/src/app/management/routes/users/user-manager.component.css
@@ -8,9 +8,6 @@
 .mat-column-name {
   max-width: 100%;
 }
-.mat-column-creationDate {
+.mat-column-role {
   text-align: center;
-}
-.mat-column-fullName {
-  max-width: 100%;
 }
