fix strict template errors

--- a/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.html
+++ b/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.html
@@ -14,7 +14,7 @@
     <form [formGroup]="formGroup" (submit)="onSubmit()">
 
       <app-slideshow class="images"
-        [(images)]="images"
+        [images]="images"
         [autocycle]="false"
         [editable]="true"
         (add)="onClickAddImage()">
