integrate person form comp with reactive forms
remove some component-level service providers
add same providers at module level
update registrationprofile model to fit with person
fix & reduce load of some unit tests

--- a/src/app/management/routes/salespeople/form-dialog/salesperson-manager-form-dialog.component.html
+++ b/src/app/management/routes/salespeople/form-dialog/salesperson-manager-form-dialog.component.html
@@ -13,7 +13,7 @@
   <div [hidden]="saving$ | async">
     <form [formGroup]="formGroup" (submit)="onSubmit()">
 
-      <app-person-form #personForm>
+      <app-person-form formControlName="person">
       </app-person-form>
 
       <div class="actions">
