--- a/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
+++ b/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
@@ -27,7 +27,7 @@
 
       <mat-form-field style="grid-area: salesperson">
         <mat-select placeholder="Vendedor" formControlName="salesperson">
-          <mat-option *ngFor="let e of (salespeople$ | async)" [value]="e.id">
+          <mat-option *ngFor="let e of (salespeople$ | async)" [value]="e.person.idCard">
             {{ e.person.name }}
           </mat-option>
         </mat-select>
@@ -35,7 +35,7 @@
 
       <mat-form-field style="grid-area: customer">
         <mat-select placeholder="Cliente" formControlName="customer">
-          <mat-option *ngFor="let c of (customers$ | async)" [value]="c.id">
+          <mat-option *ngFor="let c of (customers$ | async)" [value]="c.person.idCard">
             {{ c.person.name }}
           </mat-option>
         </mat-select>
