decouple AbstractEntity from most application code
all this class has, is an explicit id property
and yet some entities do not expose an id or have different names
e.g. product uses barcode, people+customers+salespeople use idnumber
so get,put,delete api methods had "id" parameters
instead, the whole object replaces those parameters
and let implementations handle exactly how an object exposes custom ids

*must finish removing AbstractEntity as it doesn't really help

also rename data GET api verb from read* to fetch*

--- a/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.css
+++ b/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.css
@@ -26,8 +26,8 @@ form {
   .images {
     grid-area: images;
   }
-  .code {
-    grid-area: code;
+  .barcode {
+    grid-area: barcode;
   }
   .name {
     grid-area: name;
@@ -57,7 +57,7 @@ form {
   form {
     grid-template-areas:
       'images images images'
-      'code name name'
+      'barcode name name'
       'family family family'
       'type type type'
       'price stock cStock'
