--- a/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.html
+++ b/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.html
@@ -20,8 +20,8 @@
         (add)="onClickAddImage()">
       </app-slideshow>
 
-      <mat-form-field class="code">
-        <input matInput placeholder="Código" formControlName="code" />
+      <mat-form-field class="barcode">
+        <input matInput placeholder="Código" formControlName="barcode" />
       </mat-form-field>
 
       <mat-form-field class="name">
