--- a/src/app/management/routes/salespeople/form-dialog/salesperson-manager-form-dialog.component.html
+++ b/src/app/management/routes/salespeople/form-dialog/salesperson-manager-form-dialog.component.html
@@ -6,7 +6,7 @@
 -->
 
 <div class="dialog">
-  <h2 mat-dialog-title>{{ dialogTitle }}</h2>
+  <h2 mat-dialog-title>Datos del Vendedor</h2>
   <centered-mat-spinner *ngIf="saving$ | async">
   </centered-mat-spinner>
 
