rename person "idCard" property to "idNumber"
make address optional
registration "profile" property is now a person model as well

--- a/src/app/management/routes/users/form-dialog/user-manager-form-dialog.component.html
+++ b/src/app/management/routes/users/form-dialog/user-manager-form-dialog.component.html
@@ -24,8 +24,8 @@
       <mat-form-field>
         <mat-select placeholder="Persona" formControlName="person">
           <mat-option *ngFor="let p of (people$ | async)"
-            [value]="p.idCard">
-            {{ p.name + " (" + p.idCard + ")" }}
+            [value]="p.idNumber">
+            {{ p.name + " (" + p.idNumber + ")" }}
           </mat-option>
         </mat-select>
       </mat-form-field>
