--- a/src/app/shared/components/person-form/person-form.component.html
+++ b/src/app/shared/components/person-form/person-form.component.html
@@ -11,8 +11,8 @@
     <input matInput placeholder="Nombre Completo" formControlName="name" />
   </mat-form-field>
 
-  <mat-form-field style="grid-area: idCard">
-    <input matInput placeholder="Rut" formControlName="idCard" />
+  <mat-form-field style="grid-area: idNumber">
+    <input matInput placeholder="Rut" formControlName="idNumber" />
   </mat-form-field>
 
   <mat-form-field style="grid-area: email">
