--- a/src/app/management/routes/customers/customer-manager.component.html
+++ b/src/app/management/routes/customers/customer-manager.component.html
@@ -19,10 +19,10 @@
           {{ customer.person.name }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="idCard">
+      <ng-container matColumnDef="idNumber">
         <th mat-header-cell *matHeaderCellDef> Rut </th>
         <td mat-cell *matCellDef="let customer">
-          {{ customer.person.idCard }}
+          {{ customer.person.idNumber }}
         </td>
       </ng-container>
 
