--- a/src/app/management/routes/salespeople/salesperson-manager.component.html
+++ b/src/app/management/routes/salespeople/salesperson-manager.component.html
@@ -19,10 +19,10 @@
           {{ salesperson.person.name }}
         </td>
       </ng-container>
-      <ng-container matColumnDef="idCard">
+      <ng-container matColumnDef="idNumber">
         <th mat-header-cell *matHeaderCellDef> Rut </th>
         <td mat-cell *matCellDef="let salesperson">
-          {{ salesperson.person.idCard }}
+          {{ salesperson.person.idNumber }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
