use dumb component strategy in product card

--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -16,7 +16,9 @@
 
   <div class="products" [hidden]="loading$ | async">
     <app-store-product-card *ngFor="let product of (products$ | async)"
-      [product]="product">
+      [product]="product"
+      (addToCart)="onAddProductToCart(product)"
+      (view)="onViewProduct(product)">
     </app-store-product-card>
   </div>
 </div>
