--- a/src/app/store/components/product-card/store-product-card.component.html
+++ b/src/app/store/components/product-card/store-product-card.component.html
@@ -8,15 +8,15 @@
 <mat-card>
   <div class="content" (click)="onClickViewProduct()">
     <mat-card-header>
-      <mat-card-title>{{ product?.name }}</mat-card-title>
-      <mat-card-subtitle>{{ product?.barcode }}</mat-card-subtitle>
+      <mat-card-title>{{ product.name }}</mat-card-title>
+      <mat-card-subtitle>{{ product.barcode }}</mat-card-subtitle>
     </mat-card-header>
-    <img *ngIf="product?.images?.length"
-      [src]="product?.images[0].url"
-      [alt]="product?.name" />
+    <img *ngIf="product.images?.length"
+      [src]="product.images[0].url"
+      [alt]="product.name" />
   </div>
   <div class="actions">
-    <span class="price">${{ product?.price }}</span>
+    <span class="price">${{ product.price }}</span>
     <button mat-button mat-raised-button type="button"
       class="add-to-cart"
       color="primary"
