rewrite dynamic form validation/usage
generate components using a directive instead of a component
add FormGroupOwner interface, apply it to generic model-forms
check internal generated FormGroup validity
use ngModel to bind the data itself
rename validateFormGroup function, support FormControl
no issues found

--- a/src/app/management/dialogs/data-manager-form-dialog/data-manager-form-dialog.component.css
+++ b/src/app/management/dialogs/data-manager-form-dialog/data-manager-form-dialog.component.css
@@ -14,3 +14,8 @@ form {
   grid-template-columns: 1fr;
   grid-gap: 0.5rem 1rem;
 }
+
+.actions {
+  display: flex;
+  justify-content: space-around;
+}
